github_data_collector/src/data/issue_comment/NervanaSystems_ngraph.txt
In NNP we do a slightly different topological sort in order to get certain ops to the edges of the graph. This change allows us to replace the sorting algorithm used by Function->get_ordered_ops() which is used by the pass manager.

Fix build error on macOS
```
In file included from ../src/ngraph/runtime/cpu/cpu_executor.cpp:19:
In file included from ../src/ngraph/runtime/cpu/cpu_executor.hpp:24:
In file included from ../src/ngraph/runtime/cpu/cpu_runtime_context.hpp:34:
../src/contrib/mlir/runtime/cpu/cpu_runtime.hpp:41:25: error: flexible array members are a C99 feature [-Werror,-Wc99-extensions]
                int64_t shapeAndStrides[];
                        ^
1 error generated.
```




Add provenance tags during upgrade/downgrade passes which convert ops to another opset.
This is still work in progress although it's already possible to import an ONNX model containing inputs with dynamic shapes.
https://github.com/pypa/virtualenv/issues/596